--- a/shop.html
+++ b/shop.html
@@ -236,19 +236,19 @@
         <h2>Shop Canada</h2>
         <div class="product-grid">
           <div class="product-card">
-            <img src="images/model2.jpg" alt="Cherry Red Handbag" />
+            <img src="images/Alina_black.png" alt="Cherry Red Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Cherry Red</div>
             <a href="https://www.amazon.ca/dp/B0DD2MCDFF" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
-            <img src="images/model1.jpg" alt="Night Black Handbag" />
+            <img src="images/model8.jpg" alt="Night Black Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Night Black</div>
             <a href="https://www.amazon.ca/dp/B0DCTZX1PW" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
-            <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
+            <img src="images/model7.jpg" alt="Walnut Beige Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Walnut Beige</div>
             <a href="https://www.amazon.ca/dp/B0DD2M8HH7" target="_blank" class="product-link">Shop on Amazon Canada</a>
