--- a/shop.html
+++ b/shop.html
@@ -236,13 +236,13 @@
         <h2>Shop Canada</h2>
         <div class="product-grid">
           <div class="product-card">
-            <img src="images/Alina_black.png" alt="Cherry Red Handbag" />
+            <img src="images/model8.jpg" alt="Cherry Red Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Cherry Red</div>
             <a href="https://www.amazon.ca/dp/B0DD2MCDFF" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
-            <img src="images/model8.jpg" alt="Night Black Handbag" />
+            <img src="images/Alina_black.png" alt="Night Black Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Night Black</div>
             <a href="https://www.amazon.ca/dp/B0DCTZX1PW" target="_blank" class="product-link">Shop on Amazon Canada</a>
@@ -260,7 +260,7 @@
             <a href="https://www.amazon.ca/dp/B0F7H5487J" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
-            <img src="images/model5.jpg" alt="Yellow Handbag" />
+            <img src="images/model10.jpg" alt="Yellow Handbag" />
             <div class="product-title">'Graceful Queen' Handbag</div>
             <div class="product-color">Yellow</div>
             <a href="https://www.amazon.ca/dp/B0DPZKV1YV" target="_blank" class="product-link">Shop on Amazon Canada</a>
