--- a/lookbook.html
+++ b/lookbook.html
@@ -118,12 +118,18 @@
     <section id="models">
       <h2>Spotted in Style</h2>
       <div class="grid three-col">
-        <div class="box"><a href="#img1"><img src="images/model1.jpg" alt="Model 1"></a></div>
+        <div class="box"><a href="#img1"><img src="images/Alina_black.png" alt="Model 1"></a></div>
         <div class="box"><a href="#img2"><img src="images/model2.jpg" alt="Model 2"></a></div>
-        <div class="box"><a href="#img3"><img src="images/model3.jpg" alt="Model 3"></a></div>
+        <div class="box"><a href="#img3"><img src="images/model7.jpg" alt="Model 3"></a></div>
         <div class="box"><a href="#img4"><img src="images/model4.jpg" alt="Model 4"></a></div>
         <div class="box"><a href="#img5"><img src="images/model5.jpg" alt="Model 5"></a></div>
         <div class="box"><a href="#img6"><img src="images/model6.jpg" alt="Model 6"></a></div>
+        <div class="box"><a href="#img7"><img src="images/model3.jpg" alt="Model 1"></a></div>
+        <div class="box"><a href="#img8"><img src="images/model2.jpg" alt="Model 2"></a></div>
+        <div class="box"><a href="#img9"><img src="images/model1.jpg" alt="Model 3"></a></div>
+        <div class="box"><a href="#img10"><img src="images/model4.jpg" alt="Model 4"></a></div>
+        <div class="box"><a href="#img11"><img src="images/model5.jpg" alt="Model 5"></a></div>
+        <div class="box"><a href="#img12"><img src="images/model6.jpg" alt="Model 6"></a></div>
       </div>
     </section>
 
