--- a/lookbook.html
+++ b/lookbook.html
@@ -94,10 +94,11 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="shop.html">Shop</a></li>
       <li><a href="lookbook.html" class="active">Lookbook</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
