--- a/about.html
+++ b/about.html
@@ -5,40 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our Story</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Counter.dev Tracking Script -->
   <script src="https://cdn.counter.dev/script.js" 
           data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" 
           data-utcoffset="-4"></script>
 
   <style>
-    /* Full page background with blur */
     body {
       margin: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      color: #fff;
-      background: url('images/about-side-image.jpg') no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-      min-height: 100vh;
-    }
-
-    /* Overlay with blur */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      z-index: 0;
+      background-color: #fff;
+      color: #222;
     }
 
     nav {
-      position: relative;
-      background-color: rgba(184, 134, 11, 0.9);
+      background-color: #b8860b;
       padding: 1rem;
-      z-index: 1;
     }
 
     nav ul {
@@ -56,8 +37,6 @@
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s ease;
-      position: relative;
-      z-index: 2;
     }
 
     nav a:hover {
@@ -70,52 +49,59 @@
     }
 
     .content {
-      position: relative;
-      max-width: 900px;
-      margin: 4rem auto 3rem;
+      max-width: 800px;
+      margin: 4rem auto;
       padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.45);
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-      z-index: 1;
-      color: #f5f5dc;
       text-align: left;
     }
 
-    .content h1 {
-      color: #f0c040;
-      margin-bottom: 1rem;
-      font-size: 3rem;
-      font-weight: 800;
-      letter-spacing: 1.5px;
-      text-transform: lowercase;
+    h1 {
+      color: #b8860b;
       text-align: center;
+      font-size: 3rem;
+      margin-bottom: 2rem;
+      text-transform: lowercase;
+      font-weight: 800;
     }
 
-    .content p {
+    .typewriter-text {
+      display: block;
       font-size: 1.2rem;
       line-height: 1.7;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
+      white-space: pre-wrap;
+      overflow: hidden;
+      border-right: 2px solid #000;
+      animation: typing 3s steps(60, end), blink 0.75s step-end infinite;
+    }
+
+    .typewriter-text:nth-of-type(2) {
+      animation-delay: 3.2s;
+    }
+
+    .typewriter-text:nth-of-type(3) {
+      animation-delay: 6.4s;
+    }
+
+    .typewriter-text:nth-of-type(4) {
+      animation-delay: 9.6s;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
     }
 
     footer {
       text-align: center;
       padding: 1rem;
-      background: rgba(0,0,0,0.7);
-      color: #ddd;
-      position: relative;
-      z-index: 1;
-    }
-
-    @media (max-width: 768px) {
-      .content {
-        margin: 2rem 1rem;
-        padding: 1.5rem;
-      }
-
-      .content h1 {
-        font-size: 2.2rem;
-      }
+      background-color: #f5f5f5;
+      color: #777;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -133,17 +119,21 @@
 
   <section class="content">
     <h1>ittromaa</h1>
-    <p>
-      In the vibrant heart of Vancouver, Canada, during a sunny spring when flowers were bursting into bloom, Ittromaa was born. Inspired by the stunning colors of nature and the desire for fresh, modern style, our founder noticed a gap in the North American handbag market — a need for thoughtfully designed, elegant bags that reflected the spirit of today’s conscious, sophisticated woman.
+
+    <p class="typewriter-text">
+In the vibrant heart of Vancouver, Canada, during a sunny spring when flowers were bursting into bloom, Ittromaa was born. Inspired by the stunning colors of nature and the desire for fresh, modern style, our founder noticed a gap in the North American handbag market — a need for thoughtfully designed, elegant bags that reflected the spirit of today’s conscious, sophisticated woman.
     </p>
-    <p>
-      What began as a simple idea soon blossomed into a passionate journey. From deep market research to understand what truly matters, to countless sketches capturing beauty and function in perfect harmony, every step was crafted with care. Designing each handbag with purpose and soul, we meticulously moved through sampling and collaboration with trusted manufacturers, always holding quality and ethics at the core.
+
+    <p class="typewriter-text">
+What began as a simple idea soon blossomed into a passionate journey. From deep market research to understand what truly matters, to countless sketches capturing beauty and function in perfect harmony, every step was crafted with care.
     </p>
-    <p>
-      Ittromaa isn’t just about handbags — it’s about empowering women with timeless pieces that celebrate style, sustainability, and innovation. Each bag reflects a commitment to excellence, vegan craftsmanship, and an enduring love for modern elegance.
+
+    <p class="typewriter-text">
+Designing each handbag with purpose and soul, we meticulously moved through sampling and collaboration with trusted manufacturers, always holding quality and ethics at the core.
     </p>
-    <p>
-      Join us in unraveling your inner style — where beauty meets conscience, and every detail tells a story.
+
+    <p class="typewriter-text">
+Join us in unraveling your inner style — where beauty meets conscience, and every detail tells a story.
     </p>
   </section>
 
