--- a/about.html
+++ b/about.html
@@ -1,144 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Story</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.counter.dev/script.js" 
-          data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" 
-          data-utcoffset="-4"></script>
-
+  <meta charset="UTF-8">
+  <title>Ittromaa Shop</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      background-color: #fff;
-      color: #222;
-    }
-
-    nav {
-      background-color: #b8860b;
-      padding: 1rem;
-    }
-
-    nav ul {
-      list-style: none;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fff8f4;
       display: flex;
-      justify-content: center;
-      gap: 1.2rem;
-      margin: 0;
-      padding: 0;
-      flex-wrap: wrap;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #000;
-    }
-
-    nav a.active {
-      text-decoration: underline;
-      color: #000;
-    }
-
-    .content {
-      max-width: 800px;
-      margin: 4rem auto;
-      padding: 2rem;
-      text-align: left;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+      color: #333;
     }
 
     h1 {
-      color: #b8860b;
-      text-align: center;
-      font-size: 3rem;
-      margin-bottom: 2rem;
-      text-transform: lowercase;
-      font-weight: 800;
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 30px;
+      height: 40px;
     }
 
-    .typewriter-text {
-      display: block;
-      font-size: 1.2rem;
-      line-height: 1.7;
-      margin-bottom: 2rem;
-      white-space: pre-wrap;
-      overflow: hidden;
-      border-right: 2px solid #000;
-      animation: typing 3s steps(60, end), blink 0.75s step-end infinite;
-    }
-
-    .typewriter-text:nth-of-type(2) {
-      animation-delay: 3.2s;
-    }
-
-    .typewriter-text:nth-of-type(3) {
-      animation-delay: 6.4s;
-    }
-
-    .typewriter-text:nth-of-type(4) {
-      animation-delay: 9.6s;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 100%; }
+    .typewriter-text::after {
+      content: '|';
+      animation: blink 1s step-start infinite;
+      color: #222;
     }
 
     @keyframes blink {
-      50% { border-color: transparent; }
+      50% { opacity: 0; }
     }
 
-    footer {
+    .product-section {
+      width: 100%;
+      max-width: 900px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .product-card {
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 10px;
+      width: 200px;
       text-align: center;
-      padding: 1rem;
-      background-color: #f5f5f5;
-      color: #777;
-      font-size: 0.9rem;
+      background-color: white;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .product-card:hover {
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .product-card img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
+
+    .product-title {
+      font-weight: bold;
+      margin-top: 10px;
+      font-size: 16px;
+    }
+
+    .section-title {
+      font-size: 20px;
+      font-weight: 600;
+      margin: 40px 0 20px;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="lookbook.html">Lookbook</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
 
-  <section class="content">
-    <h1>ittromaa</h1>
+  <h1><span id="typewriter" class="typewriter-text"></span></h1>
 
-    <p class="typewriter-text">
-In the vibrant heart of Vancouver, Canada, during a sunny spring when flowers were bursting into bloom, Ittromaa was born. Inspired by the stunning colors of nature and the desire for fresh, modern style, our founder noticed a gap in the North American handbag market — a need for thoughtfully designed, elegant bags that reflected the spirit of today’s conscious, sophisticated woman.
-    </p>
+  <div class="section-title">Shop for USA</div>
+  <div class="product-section">
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61sCgT4avzL._AC_UY1000_.jpg" alt="Night Black">
+      <div class="product-title">Night Black</div>
+    </div>
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61Vm+Xxn5LL._AC_UY1000_.jpg" alt="Cherry Red">
+      <div class="product-title">Cherry Red</div>
+    </div>
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61mU+e4vMnL._AC_UY1000_.jpg" alt="Walnut Beige">
+      <div class="product-title">Walnut Beige</div>
+    </div>
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/61S2PRXuoWL._AC_UY1000_.jpg" alt="Graceful Queen - Elegant Brown">
+      <div class="product-title">Graceful Queen - Elegant Brown</div>
+    </div>
+    <div class="product-card">
+      <img src="https://m.media-amazon.com/images/I/71f3eeB5VXL._AC_UY1000_.jpg" alt="Graceful Queen - Ivory Pearl">
+      <div class="product-title">Graceful Queen - Ivory Pearl</div>
+    </div>
+  </div>
 
-    <p class="typewriter-text">
-What began as a simple idea soon blossomed into a passionate journey. From deep market research to understand what truly matters, to countless sketches capturing beauty and function in perfect harmony, every step was crafted with care.
-    </p>
+  <div class="section-title">Shop for Canada</div>
+  <div class="product-section">
+    <!-- Add Canada's products here -->
+  </div>
 
-    <p class="typewriter-text">
-Designing each handbag with purpose and soul, we meticulously moved through sampling and collaboration with trusted manufacturers, always holding quality and ethics at the core.
-    </p>
+  <script>
+    const text = "Buy Your Designer Handbag — Crafted for Elegance, Made to Inspire";
+    const speed = 25; // milliseconds per letter (adjust 15–40 for faster/slower)
+    let i = 0;
 
-    <p class="typewriter-text">
-Join us in unraveling your inner style — where beauty meets conscience, and every detail tells a story.
-    </p>
-  </section>
+    function typeWriter() {
+      if (i < text.length) {
+        document.getElementById("typewriter").innerHTML += text.charAt(i);
+        i++;
+        setTimeout(typeWriter, speed);
+      }
+    }
 
-  <footer>
-    <p>&copy; 2024-2025 ittromaa. All rights reserved.</p>
-  </footer>
+    window.onload = typeWriter;
+  </script>
+
 </body>
 </html>
