--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <script src="https://cdn.counter.dev/script.js"
           data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c"
           data-utcoffset="-4"></script>
-
   <style>
     body {
       background-color: #f7f7f7;
       margin: 0;
       font-family: Arial, sans-serif;
+      color: #222;
     }
 
     nav {
@@ -49,7 +49,7 @@
       font-weight: 800;
       letter-spacing: 2px;
       color: #b8860b;
-      margin-bottom: 0.3rem;
+      margin: 2rem 0 0.3rem;
       text-align: center;
       text-transform: lowercase;
     }
@@ -110,26 +110,49 @@
     }
 
     /* Testimonials Scroller */
+    .product-gallery {
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    .product-gallery h2 {
+      font-size: 2rem;
+      color: #b8860b;
+      margin-bottom: 1rem;
+    }
+
     .testimonials {
       overflow-x: auto;
       display: flex;
       gap: 1.5rem;
-      padding: 2rem;
+      padding: 1rem 0 2rem;
       scroll-snap-type: x mandatory;
     }
 
     .testimonial {
       flex: 0 0 auto;
-      width: 300px;
+      width: 260px;
       scroll-snap-align: center;
       position: relative;
       transition: transform 0.3s ease;
     }
 
     .testimonial img {
-      width: 100%;
+      width: 260px;
+      height: 320px;
+      object-fit: cover;
       border-radius: 15px;
       transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    .testimonial:hover img {
+      transform: scale(1.05);
+      filter: brightness(1.1);
+      z-index: 2;
+    }
+
+    .testimonial img:not(:hover) {
+      filter: grayscale(30%) blur(0.5px);
     }
 
     .testimonials::-webkit-scrollbar {
@@ -141,17 +164,7 @@
       border-radius: 10px;
     }
 
-    .testimonial:hover img {
-      transform: scale(1.05);
-      filter: none;
-      z-index: 2;
-    }
-
-    .testimonial img:not(:hover) {
-      filter: grayscale(40%) blur(1px);
-    }
-
-    /* Modal for image zoom */
+    /* Modal */
     .modal {
       display: none;
       position: fixed;
@@ -163,12 +176,14 @@
       background: rgba(0,0,0,0.85);
       align-items: center;
       justify-content: center;
+      transition: opacity 0.3s ease;
     }
 
     .modal img {
       max-width: 90%;
       max-height: 90%;
       border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
 
     .modal:target {
@@ -182,6 +197,25 @@
       font-size: 0.9rem;
       color: #666;
       margin-top: 3rem;
+    }
+
+    @media (max-width: 600px) {
+      .brand-name {
+        font-size: 3rem;
+      }
+
+      .title {
+        font-size: 1.5rem;
+      }
+
+      .testimonial img {
+        width: 90vw;
+        height: auto;
+      }
+
+      .testimonial {
+        width: 90vw;
+      }
     }
   </style>
 </head>
@@ -200,7 +234,6 @@
   <!-- Slideshow -->
   <section class="slideshow">
     <div class="slide-track">
-      <!-- 10 images -->
       <img src="images/model1.jpg" alt="Bag 1" onclick="openModal(this.src)" />
       <img src="images/model2.jpg" alt="Bag 2" onclick="openModal(this.src)" />
       <img src="images/model3.jpg" alt="Bag 3" onclick="openModal(this.src)" />
@@ -232,22 +265,21 @@
   <section class="product-gallery">
     <h2>Customer Love</h2>
     <div class="testimonials">
-      <!-- Add up to 15 testimonial images -->
-      <div class="testimonial"><img src="images/feedbackimage1.jpg" alt="Testimonial 1" /></div>
-      <div class="testimonial"><img src="images/feedbackimage2.jpg" alt="Testimonial 2" /></div>
-      <div class="testimonial"><img src="images/feedbackimage3.jpg" alt="Testimonial 3" /></div>
-      <div class="testimonial"><img src="images/feedbackimage4.jpg" alt="Testimonial 4" /></div>
-      <div class="testimonial"><img src="images/feedbackimage5.jpg" alt="Testimonial 5" /></div>
-      <div class="testimonial"><img src="images/feedbackimage6.jpg" alt="Testimonial 6" /></div>
-      <div class="testimonial"><img src="images/feedbackimage7.jpg" alt="Testimonial 7" /></div>
-      <div class="testimonial"><img src="images/feedbackimage8.jpg" alt="Testimonial 8" /></div>
-      <div class="testimonial"><img src="images/feedbackimage9.jpg" alt="Testimonial 9" /></div>
-      <div class="testimonial"><img src="images/feedbackimage10.jpg" alt="Testimonial 10" /></div>
-      <div class="testimonial"><img src="images/feedbackimage11.jpg" alt="Testimonial 11" /></div>
-      <div class="testimonial"><img src="images/feedbackimage12.jpg" alt="Testimonial 12" /></div>
-      <div class="testimonial"><img src="images/feedbackimage13.jpg" alt="Testimonial 13" /></div>
-      <div class="testimonial"><img src="images/feedbackimage14.jpg" alt="Testimonial 14" /></div>
-      <div class="testimonial"><img src="images/feedbackimage15.jpg" alt="Testimonial 15" /></div>
+      <div class="testimonial"><img src="images/feedbackimage1.jpg" alt="Customer Testimonial 1" /></div>
+      <div class="testimonial"><img src="images/feedbackimage2.jpg" alt="Customer Testimonial 2" /></div>
+      <div class="testimonial"><img src="images/feedbackimage3.jpg" alt="Customer Testimonial 3" /></div>
+      <div class="testimonial"><img src="images/feedbackimage4.jpg" alt="Customer Testimonial 4" /></div>
+      <div class="testimonial"><img src="images/feedbackimage5.jpg" alt="Customer Testimonial 5" /></div>
+      <div class="testimonial"><img src="images/feedbackimage6.jpg" alt="Customer Testimonial 6" /></div>
+      <div class="testimonial"><img src="images/feedbackimage7.jpg" alt="Customer Testimonial 7" /></div>
+      <div class="testimonial"><img src="images/feedbackimage8.jpg" alt="Customer Testimonial 8" /></div>
+      <div class="testimonial"><img src="images/feedbackimage9.jpg" alt="Customer Testimonial 9" /></div>
+      <div class="testimonial"><img src="images/feedbackimage10.jpg" alt="Customer Testimonial 10" /></div>
+      <div class="testimonial"><img src="images/feedbackimage11.jpg" alt="Customer Testimonial 11" /></div>
+      <div class="testimonial"><img src="images/feedbackimage12.jpg" alt="Customer Testimonial 12" /></div>
+      <div class="testimonial"><img src="images/feedbackimage13.jpg" alt="Customer Testimonial 13" /></div>
+      <div class="testimonial"><img src="images/feedbackimage14.jpg" alt="Customer Testimonial 14" /></div>
+      <div class="testimonial"><img src="images/feedbackimage15.jpg" alt="Customer Testimonial 15" /></div>
     </div>
   </section>
 
@@ -257,17 +289,21 @@
 
   <!-- Modal viewer -->
   <div id="imageModal" class="modal" onclick="closeModal()">
-    <img id="modalImage" src="" alt="Zoomed" />
+    <img id="modalImage" src="" alt="Zoomed testimonial" />
   </div>
 
   <script>
     function openModal(src) {
+      const modal = document.getElementById('imageModal');
       document.getElementById('modalImage').src = src;
-      document.getElementById('imageModal').style.display = 'flex';
+      modal.style.display = 'flex';
+      modal.style.opacity = '1';
     }
 
     function closeModal() {
-      document.getElementById('imageModal').style.display = 'none';
+      const modal = document.getElementById('imageModal');
+      modal.style.opacity = '0';
+      setTimeout(() => { modal.style.display = 'none'; }, 300);
     }
   </script>
 </body>
